<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/farm_name"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:text="이름"
                android:textColor="@color/primaryText"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/farm_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center"
                android:singleLine="true"
                android:text="날짜"
                android:textColor="@color/primaryText2"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_tag_delete"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/FlatLightAqua"
                android:padding="5dp"
                android:text="@string/client_delete"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/primaryText2" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="bottom"
                        android:text="@string/light"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/now_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/light"
                        android:textAlignment="center"
                        android:textColor="@color/primaryText"
                        android:textSize="60sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/primaryText2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|bottom"
                        android:text="@string/lights"
                        android:textColor="@color/theme_color"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="top|center"
                        android:text="@string/light2"
                        android:textColor="@color/theme_color"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/day"
                                android:textColor="@color/theme_color"
                                android:textSize="23sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/week"
                                android:textColor="@color/theme_color"
                                android:textSize="23sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/month"
                                android:textColor="@color/theme_color"
                                android:textSize="23sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/day_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/day"
                                android:textColor="@color/primaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/week_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/week"
                                android:textColor="@color/primaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/month_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/month"
                                android:textColor="@color/primaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryText4"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/primaryText4"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="Recent data"
                            android:textColor="@color/primaryText"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/primaryText4"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/databtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/primaryText2"
                            android:text="Check"
                            android:textColor="@color/White"
                            android:textSize="14sp" />
                    </LinearLayout>


                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:stretchColumns="*"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:text="@string/resent"
                            android:textColor="@color/primaryText"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/temp"
                            android:textColor="@color/primaryText"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/humid"
                            android:textColor="@color/primaryText"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/co2s"
                            android:textColor="@color/primaryText"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/recent_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:text="@string/resent"
                            android:textColor="@color/primaryText2"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/recent_now"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/temps"
                            android:textColor="@color/primaryText2"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/recent_acc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/humids"
                            android:textColor="@color/primaryText2"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/recent_reft"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/ppm"
                            android:textColor="@color/primaryText2"
                            android:textSize="13sp" />

                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>