<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/White"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clientId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="start|center"
                android:text="Name"
                android:textColor="@color/primaryText"
                android:textSize="25sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/typeimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/GasLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/lux"
                android:textColor="@color/primaryText2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/temp"
                android:textColor="@color/primaryText2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/humid"
                android:textColor="@color/primaryText2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/co2"
                android:textColor="@color/primaryText2"
                android:textSize="17sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/gen"
                android:textColor="@color/primaryText2"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lux"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/lux"
                android:textColor="@color/primaryText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/temp"
                android:textColor="@color/primaryText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/humid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/humid"
                android:textColor="@color/primaryText"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/co2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/co2"
                android:textColor="@color/primaryText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/gen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/gen"
                android:textColor="@color/primaryText"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>



    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/theme_color" />
</LinearLayout>